<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context="com.seandurban.apps.simpleweighttracker.MainMenu"
    android:background="#c2131313"
    style="@style/Widget.AppCompat.ButtonBar"
    android:gravity="top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainMenuText"
        android:id="@+id/mainMenuText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/recordNewWeighinTextLand"
        android:id="@+id/recordButton"
        android:layout_below="@+id/mainMenuText"
        android:layout_centerHorizontal="true"
        android:onClick="recordOnClick"
        android:background="@drawable/btn_yellow"
        style="@style/ButtonText"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/recordsMMTextLand"
        android:id="@+id/recordsButton"
        android:layout_below="@+id/recordButton"
        android:onClick="recordsOnClick"
        android:background="@drawable/btn_red"
        style="@style/ButtonText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left"
        android:layout_margin="7dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/settingsMMTextLand"
        android:id="@+id/settingsButton"
        android:onClick="settingsOnClick"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"
        android:layout_below="@+id/statsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="7dp"/>

    <Button
        android:text="@string/statsMMTextLand"
        android:background="@drawable/btn_blue"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/statsButton"
        android:layout_alignParentBottom="false"
        android:onClick="statsOnClick"
        android:layout_below="@+id/recordsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="7dp"/>

</RelativeLayout>
