<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.seandurban.apps.simpleweighttracker.recordWeight"
    android:backgroundTintMode="screen"
    android:background="@drawable/scales3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/unitsRWText"
        android:id="@+id/unitsText"
        android:layout_alignBottom="@+id/weightInput"
        android:layout_toRightOf="@+id/weightInput"
        android:layout_toEndOf="@+id/weightInput"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enterNewRWText"
        android:id="@+id/enterText"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weighinRWText"
        android:id="@+id/weighinText"
        android:layout_below="@+id/enterText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightInput"
        android:maxWidth="30dp"
        android:visibility="visible"
        android:width="75dp"
        android:layout_below="@+id/weighinText"
        android:layout_centerHorizontal="true"
        android:textColor="#ef4444"
        android:layout_marginBottom="50dp"
        android:textIsSelectable="false"
        android:textAlignment="center" />

    <Button
        style="@style/ButtonText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addRWText"
        android:id="@+id/addButton"
        android:textAllCaps="false"
        android:background="@drawable/btn_red"
        android:onClick="onAddClicked"
        android:layout_below="@+id/weightInput"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/goalWeightRWText"
        android:id="@+id/goalText"
        android:layout_below="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:textColor="#ffffff"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/goalWeightText"
        android:layout_below="@+id/goalText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:enabled="false"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/unitsText2"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/goalWeightText"
        android:layout_alignLeft="@+id/unitsText"
        android:layout_alignStart="@+id/unitsText"
        android:visibility="invisible" />

</RelativeLayout>
